Updated sentence structure and content for better readability in floors, depths, and recommended_missions .html files.

--- a/nioh2/world/missions/recommended_missions.html
+++ b/nioh2/world/missions/recommended_missions.html
@@ -264,14 +264,19 @@
             </div>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                The player must complete at least 18 missions to unlock the mission
-                <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> in the final region
-                (Afterglow). Below is a recommended list of missions to complete, seperated by each region. Completing 
-                <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> unlocks the next
-                difficulty, and is required. We want to select short and fast missions. Generally these missions will be gauntlet
-                style / linear missions. If we can acquire Locks of Hair, or other very important items during these short 
-                missions then that would be optimal, but we will generally not go out of our way to get these items. We can always
-                come back later and acquire the Locks of Hair, or the other important items. 
+                In a New Game play through (Dream of the Samurai), the player must complete all Main Missions. Completing the
+                final main mission <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> in the
+                final region (Afterglow) will unlock the next difficulty. The order of difficulties is as follows: Dream of the 
+                Samurai (NG) &#10230; Dream of the Strong (NG+) &#10230; Dream of the Demon (NG+2) &#10230; Dream of the Wise 
+                (NG+3) &#10230; Dream of the Nioh (NG+4). When a player enters a new game cycle, all missions in the first 3 
+                regions (Awakening, Soaring, and Shadow regions) will automatically be unlocked. To progress and complete that 
+                difficulty the player must complete at least 18 missions to unlock the final main mission
+                <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a>. Completing this mission 
+                unlocks the next difficulty, and is required. Below is a recommended list of missions to complete, seperated by
+                each region. We want to select short and fast missions. Generally these missions will be gauntlet style / linear
+                missions. If we can acquire Locks of Hair, or other important items during these missions then that would be 
+                optimal, but we will generally not go out of our way to get these items. We can always come back later and 
+                acquire the Locks of Hair, or other important items. 
             </p>
         </div>
     </section>
@@ -284,8 +289,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region1" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Awakening Region (1st Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/awakening_region_logo.png" alt="Awakening Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/awakening_region_logo.png" alt="Awakening Region icon">
             </div>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
@@ -315,8 +320,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region2" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Soaring Region (2nd Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/soaring_region_logo.png" alt="Soaring Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/soaring_region_logo.png" alt="Soaring Region icon">
             </div>
 
             <div class="px-4 2xl:px-0 w-full flex flex-col items-center gap-4 text-3xl text-sky-400 text-center">
@@ -338,8 +343,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region3" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Shadow Region (3rd Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/shadow_region_logo.png" alt="Shadow Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/shadow_region_logo.png" alt="Shadow Region icon">
             </div>
 
             <div class="px-4 2xl:px-0 w-full flex flex-col items-center gap-4 text-3xl text-sky-400 text-center">
@@ -362,8 +367,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region4" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Dawn Region (4th Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/dawn_region_logo.png" alt="Dawn Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/dawn_region_logo.png" alt="Dawn Region icon">
             </div>
 
             <div class="px-4 2xl:px-0 w-full flex flex-col items-center gap-4 text-3xl text-sky-400 text-center">
@@ -384,8 +389,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region5" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Twilight Region (5th Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/twilight_region_logo.png" alt="Twilight Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/twilight_region_logo.png" alt="Twilight Region icon">
             </div>
 
             <div class="px-4 2xl:px-0 w-full flex flex-col items-center gap-4 text-3xl text-sky-400 text-center">
@@ -405,8 +410,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region6" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Dream Region (6th Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/dream_region_logo.png" alt="Dream Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/dream_region_logo.png" alt="Dream Region icon">
             </div>
 
             <div class="px-4 2xl:px-0 w-full flex flex-col items-center gap-4 text-3xl text-sky-400 text-center">
@@ -424,8 +429,8 @@
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <div id="region7" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Afterglow Region (7th Region):</h2>
-                <img class="w-auto h-auto mb-2" src="./img/afterglow_region_logo.png" alt="Afterglow Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
+                <img class="w-auto h-auto mt-3" src="./img/afterglow_region_logo.png" alt="Afterglow Region icon">
             </div>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
