--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -257,14 +257,15 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                Each Strata or the Floor of the Underworld is comprised of 2 sections: 1) The Netherscape which contains various
-                enemies and 4 <a class="text-sky-400 hover:text-sky-600" href="">Jizo-Kodama</a>; 2) The Crucible which contains
-                the main boss of the Floor. Once spawned into the Netherscape the player can collect anywhere between 1 and 4 
-                Jizo-Kodama. The player must collect at least 1 Jizo Kodama in order to move onto the Crucible. Once the player 
-                has collected at least 1 Jizo-Kodama a portal will appear at the location of where the player collected the 
-                Jizo-Kodama as well as a portal next to the Shrine. Once the player is in the Crucible they cannot return back 
-                to the Netherscape. In order to go the next Floor of the Underworld the player must defeat the Boss in the 
-                Crucible. Below contains the full list of all of the Bosses on each Floor.
+                Each Strata, or each Floor of the Underworld is comprised of 2 sections: 1) The Netherscape, which contains 
+                various enemies and 4 <a class="text-sky-400 hover:text-sky-600" href="">Jizo-Kodama</a>; 2) The Crucible 
+                which contains the main boss of the Floor. Once spawned into the Netherscape the player can collect anywhere 
+                between 1 and 4 Jizo-Kodama, but a minimum of 1 is required. When the player collects their first Jizo-Kodama 
+                a portal to the Crucible will appear there along with another one next to the Shrine. Subsequent collections 
+                of the remaining Jizo-Kodama will unlock portals at that location. Once the player enters the Crucible they 
+                cannot return back to the Netherscape. In order to progress and go the next Floor of the Underworld the player 
+                must defeat the Boss in the Crucible. Below contains the full list detailing the Netherscape level and the 
+                Crucible Boss on each Floor.
             </p>
         </div>
     </section>
@@ -283,7 +284,7 @@
                 <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal Graces</span>
                 are split into 3 Grace Pools (6 Graces in each pool). Only those certain Graces from that Grace pool will be
                 attached to the weapons, armors, and accessories that drop on that specific Floor. The tables below show which
-                Graces drop on which floor. You can view the full details of all of the Graces
+                Graces drop on which floor. You can view the full details and effects of all of the Graces
                 <a class="text-sky-400 hover:text-sky-600" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/graces/graces.html#wise"
                     target="_blank" rel="noopener noreferrer">here</a>.
 
