--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -299,7 +299,7 @@
             <h2 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Running Demon Parade Picture Scrolls</h2>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 When a player obtains a Picture Scroll, the Scroll will always show 2 locked attributes
-                <img class="inline" src="./img/special_effect_icon.png" alt="special effect icon">, along with 2 hidden 
+                <img class="inline pl-1" src="./img/special_effect_icon.png" alt="special effect icon">, along with 2 hidden 
                 attributes. The player must complete the Scroll to unlock the attributes. The total number of attributes varies 
                 depending on the rarity of the Scroll. Generally higher tier Scrolls will have more attributes (up to 5). Only 
                 Scrolls of the Damned will have the maximum total of 6 attributes (2 locked attributes 
