Changed the weapon name of "Katana" into the official name of "Sword" in all location in weapon_texts.html. Added more content to DOTSamurai_enemies, DOTSamurai_missions, and DOTSamurai_texts .txt files.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -240,7 +240,7 @@
     <section class="w-full my-12 flex flex-col items-center">
         <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
             <ol class="list-decimal list-inside text-xl text-sky-400">
-                <li><a class="hover:text-sky-600" href="javascript: katana()">Katana Smithing Texts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: sword()">Sword Smithing Texts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: dual()">Dual Swords Smithing Texts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: spear()">Spear Smithing Texts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: axe()">Axe Smithing Texts</a></li>
@@ -300,13 +300,13 @@
 
 
     <!-- ========== ========== ========== ========== ==========
-    Katana Smithing Texts
+    Sword Smithing Texts
     ========== ========== ========== ========== ========== -->
-    <section id="katana" class="w-full my-12 lg:px-0 flex flex-col items-center">
+    <section id="sword" class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
-            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Katana Smithing Texts</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Sword Smithing Texts</h2>
             <img src="./img/sword_logo.png" alt="Sword icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
