Added new description images in temp_img/. Updated content to be correct in recommended_missions.html. Added more content to other_general_data, DOTSamurai_enemies, DOTSamurai_missions, and DOTSamurai_texts .txt files.

--- a/nioh2/world/missions/recommended_missions.html
+++ b/nioh2/world/missions/recommended_missions.html
@@ -268,8 +268,8 @@
                 final main mission <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> in the
                 final region (Afterglow) will unlock the next difficulty. The order of difficulties is as follows: Dream of the 
                 Samurai (NG) &#10230; Dream of the Strong (NG+) &#10230; Dream of the Demon (NG+2) &#10230; Dream of the Wise 
-                (NG+3) &#10230; Dream of the Nioh (NG+4). When a player enters a new game cycle, all missions in the first 3 
-                regions (Awakening, Soaring, and Shadow regions) will automatically be unlocked. To progress and complete that 
+                (NG+3) &#10230; Dream of the Nioh (NG+4). When a player enters a new game cycle, all missions in the first 2
+                regions (Awakening and Soaring regions) will automatically be unlocked. To progress and complete that 
                 difficulty the player must complete at least 18 missions to unlock the final main mission
                 <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a>. Completing this mission 
                 unlocks the next difficulty, and is required. Below is a recommended list of missions to complete, seperated by
