Fixed the Attunement Cost numbers for certain Soul Cores, and fixed the ordering of Soul Cores for DLC 2 in cores_list.html. Added more content to other_general_data, DOTSamurai_enemies, and DOTSamurai_missions .txt files.

--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -2120,7 +2120,7 @@
                                 <span class="text-sky-400 group-hover:text-sky-600">Uminyudo (Boss)</span>
                                 <img src="./img/uminyudo.png" alt="">
                             </a></td>
-                            <td rowspan="2">10</td>
+                            <td rowspan="2">9</td>
                             <td rowspan="2">9</td>
                             <td rowspan="2" class="max-w-[150px]">Yes</td>
                             <td>
@@ -2288,35 +2288,35 @@
                     </tbody>
 
                     <!-- ==========
-                    Hellish Hag 
+                    Yasha 
                     ========== -->
                     <tbody class="even:bg-dark-gray-2">
                         <tr>
                             <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Hellish Hag</span>
-                                <img src="./img/hellish_hag.png" alt="">
+                                <span class="text-sky-400 group-hover:text-sky-600">Yasha</span>
+                                <img src="./img/yasha.png" alt="">
                             </a></td>
+                            <td rowspan="2">7</td>
                             <td rowspan="2">6</td>
-                            <td rowspan="2">4</td>
-                            <td rowspan="2" class="max-w-[150px]">Yes</td>
+                            <td rowspan="2" class="max-w-[150px]">No</td>
                             <td>
                                 <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                <span class="text-rare-text-color">Life Recovery (Amrita Absorption)</span>
+                                Active Skill Ki Consumption
                             </td>
-                            <td>10</td>
-                            <td>14</td>
-                            <td>18</td>
-                            <td>23</td>
+                            <td>-2.2%</td>
+                            <td>-2.7%</td>
+                            <td>-3.5%</td>
+                            <td>-4.3%</td>
                         </tr>
                         <tr>
                             <td>
                                 <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                Dash Speed
+                                Anima Bonus (Water Attack)
                             </td>
-                            <td>3.2%</td>
-                            <td>4.0%</td>
-                            <td>5.2%</td>
-                            <td>6.3%</td>
+                            <td>D+</td>
+                            <td>C</td>
+                            <td>B-</td>
+                            <td>B+</td>
                         </tr>
                     </tbody>
 
@@ -2354,78 +2354,45 @@
                     </tbody>
 
                     <!-- ==========
-                    Underworld Soldier 
+                    Giant Toad (Boss) 
                     ========== -->
                     <tbody class="even:bg-dark-gray-2">
                         <tr>
                             <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Underworld Soldier</span>
-                                <img src="./img/underworld_soldier.png" alt="">
+                                <span class="text-sky-400 group-hover:text-sky-600">Giant Toad (Boss)</span>
+                                <img src="./img/giant_toad.png" alt="">
                             </a></td>
-                            <td rowspan="2">6</td>
-                            <td rowspan="2">5</td>
+                            <td rowspan="2">8</td>
+                            <td rowspan="2">7</td>
                             <td rowspan="2" class="max-w-[150px]">Yes</td>
                             <td>
                                 <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                <span class="text-uncommon-text-color">Anima Bonus (Grapple)</span>
+                                Bomb Damage
                             </td>
-                            <td>1.1</td>
-                            <td>1.7</td>
-                            <td>2.5</td>
-                            <td>3.3</td>
+                            <td>3.4%</td>
+                            <td>4.0%</td>
+                            <td>5.2%</td>
+                            <td>6.3%</td>
                         </tr>
                         <tr>
                             <td>
                                 <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                Melee Damage (Dark Realm)
+                                <span class="text-uncommon-text-color">Untouched Ninjutsu</span>
                             </td>
-                            <td>2.1%</td>
-                            <td>2.7%</td>
-                            <td>3.5%</td>
-                            <td>4.3%</td>
+                            <td>1.2%</td>
+                            <td>1.6%</td>
+                            <td>2.3%</td>
+                            <td>2.9%</td>
                         </tr>
                     </tbody>
 
                     <!-- ==========
-                    Yasha 
+                    Infernal Fox Spirit
                     ========== -->
                     <tbody class="even:bg-dark-gray-2">
                         <tr>
                             <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Yasha</span>
-                                <img src="./img/yasha.png" alt="">
-                            </a></td>
-                            <td rowspan="2">7</td>
-                            <td rowspan="2">6</td>
-                            <td rowspan="2" class="max-w-[150px]">No</td>
-                            <td>
-                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                Active Skill Ki Consumption
-                            </td>
-                            <td>-2.2%</td>
-                            <td>-2.7%</td>
-                            <td>-3.5%</td>
-                            <td>-4.3%</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                Anima Bonus (Water Attack)
-                            </td>
-                            <td>D+</td>
-                            <td>C</td>
-                            <td>B-</td>
-                            <td>B+</td>
-                        </tr>
-                    </tbody>
-
-                    <!-- ==========
-                    Infernal Fox 
-                    ========== -->
-                    <tbody class="even:bg-dark-gray-2">
-                        <tr>
-                            <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Infernal Fox</span>
+                                <span class="text-sky-400 group-hover:text-sky-600">Infernal Fox Spirit</span>
                                 <img src="./img/infernal_fox.png" alt="">
                             </a></td>
                             <td rowspan="2">5</td>
@@ -2449,6 +2416,72 @@
                             <td>C-</td>
                             <td>B-</td>
                             <td>A-</td>
+                        </tr>
+                    </tbody>
+
+                    <!-- ==========
+                    Thunderstorm Fox Spirit
+                    ========== -->
+                    <tbody class="even:bg-dark-gray-2">
+                        <tr>
+                            <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
+                                <span class="text-sky-400 group-hover:text-sky-600">Thunderstorm Fox Spirit</span>
+                                <img src="./img/thunderstorm_fox.png" alt="">
+                            </a></td>
+                            <td rowspan="2">5</td>
+                            <td rowspan="2">3</td>
+                            <td rowspan="2" class="max-w-[150px]">No</td>
+                            <td>
+                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                                Elemental Weapon Damage
+                            </td>
+                            <td>1.0%</td>
+                            <td>1.5%</td>
+                            <td>2.1%</td>
+                            <td>2.6%</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                                <span class="text-rare-text-color">Life Drain (Lightning Attack)</span>
+                            </td>
+                            <td>D-</td>
+                            <td>C-</td>
+                            <td>B-</td>
+                            <td>A-</td>
+                        </tr>
+                    </tbody>
+
+                    <!-- ==========
+                    Hellish Hag 
+                    ========== -->
+                    <tbody class="even:bg-dark-gray-2">
+                        <tr>
+                            <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
+                                <span class="text-sky-400 group-hover:text-sky-600">Hellish Hag</span>
+                                <img src="./img/hellish_hag.png" alt="">
+                            </a></td>
+                            <td rowspan="2">6</td>
+                            <td rowspan="2">4</td>
+                            <td rowspan="2" class="max-w-[150px]">Yes</td>
+                            <td>
+                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                                <span class="text-rare-text-color">Life Recovery (Amrita Absorption)</span>
+                            </td>
+                            <td>10</td>
+                            <td>14</td>
+                            <td>18</td>
+                            <td>23</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                                Dash Speed
+                            </td>
+                            <td>3.2%</td>
+                            <td>4.0%</td>
+                            <td>5.2%</td>
+                            <td>6.3%</td>
                         </tr>
                     </tbody>
 
@@ -2488,6 +2521,39 @@
                     </tbody>
 
                     <!-- ==========
+                    Underworld Soldier 
+                    ========== -->
+                    <tbody class="even:bg-dark-gray-2">
+                        <tr>
+                            <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
+                                <span class="text-sky-400 group-hover:text-sky-600">Underworld Soldier</span>
+                                <img src="./img/underworld_soldier.png" alt="">
+                            </a></td>
+                            <td rowspan="2">6</td>
+                            <td rowspan="2">5</td>
+                            <td rowspan="2" class="max-w-[150px]">Yes</td>
+                            <td>
+                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                                <span class="text-uncommon-text-color">Anima Bonus (Grapple)</span>
+                            </td>
+                            <td>1.1</td>
+                            <td>1.7</td>
+                            <td>2.5</td>
+                            <td>3.3</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                                Melee Damage (Dark Realm)
+                            </td>
+                            <td>2.1%</td>
+                            <td>2.7%</td>
+                            <td>3.5%</td>
+                            <td>4.3%</td>
+                        </tr>
+                    </tbody>
+
+                    <!-- ==========
                     Lightning Gods of Yomi (Boss) 
                     ========== -->
                     <tbody class="even:bg-dark-gray-2">
@@ -2519,40 +2585,7 @@
                             <td>14</td>
                             <td>19</td>
                         </tr>
-                    </tbody>
-
-                    <!-- ==========
-                    Giant Toad (Boss) 
-                    ========== -->
-                    <tbody class="even:bg-dark-gray-2">
-                        <tr>
-                            <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Giant Toad (Boss)</span>
-                                <img src="./img/giant_toad.png" alt="">
-                            </a></td>
-                            <td rowspan="2">8</td>
-                            <td rowspan="2">7</td>
-                            <td rowspan="2" class="max-w-[150px]">Yes</td>
-                            <td>
-                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                Bomb Damage
-                            </td>
-                            <td>3.4%</td>
-                            <td>4.0%</td>
-                            <td>5.2%</td>
-                            <td>6.3%</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                <span class="text-uncommon-text-color">Untouched Ninjutsu</span>
-                            </td>
-                            <td>1.2%</td>
-                            <td>1.6%</td>
-                            <td>2.3%</td>
-                            <td>2.9%</td>
-                        </tr>
-                    </tbody>
+                    </tbody>                    
                 </table>
             </div>
         </div>
@@ -2628,38 +2661,7 @@
                         </tr>
                     </tbody> 
 
-                    <!-- ==========
-                    Thunderstorm Fox 
-                    ========== -->
-                    <tbody class="even:bg-dark-gray-2">
-                        <tr>
-                            <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Thunderstorm Fox</span>
-                                <img src="./img/thunderstorm_fox.png" alt="">
-                            </a></td>
-                            <td rowspan="2">5</td>
-                            <td rowspan="2">3</td>
-                            <td rowspan="2" class="max-w-[150px]">No</td>
-                            <td>
-                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                Elemental Weapon Damage
-                            </td>
-                            <td>1.0%</td>
-                            <td>1.5%</td>
-                            <td>2.1%</td>
-                            <td>2.6%</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                                <span class="text-rare-text-color">Life Drain (Lightning Attack)</span>
-                            </td>
-                            <td>D-</td>
-                            <td>C-</td>
-                            <td>B-</td>
-                            <td>A-</td>
-                        </tr>
-                    </tbody>
+                    
 
                     <!-- ==========
                     Konaki-Jiji 
