Added 2 new Key Images in /temp_img/. Adjusted content, and changed the ordering of missions in achievements.html for better clarity, and correct ordering. Added more content to DOTSamurai_enemies, and DOTSamurai_missions .txt files.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -1467,6 +1467,7 @@
                     </div></td>
                     <td>
                         Lit all of the fire altars in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Palace of the Damned</a>.
+                        There are a total of 5 fire altars.
                     </td>
                 </tr>
                 
@@ -1479,7 +1480,8 @@
                     <td>
                         Defeated <a class="text-sky-400 hover:text-sky-600" href="">Tsuchigumo</a> while equipped with at least 
                         one piece of gear with the special effect "Dragon Ninja". Achievement can be obtained in the main mission: 
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a>, and Underworld Floors: 31, 44, and 76.
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a>, and Underworld Floors: 31, 44,
+                        and 76.
                     </td>
                 </tr>
                 
@@ -1521,9 +1523,9 @@
                         <br><br>
 
                         <ul class="list-disc list-inside flex flex-col gap-2">
-                            <li><a class="text-sky-400 hover:text-sky-600" href="">Palace of the Damned</a> (8)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Suzune in the Flames</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a> (9)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Palace of the Damned</a> (8)</li>
                         </ul>
                     </td>
                 </tr>
@@ -1539,10 +1541,10 @@
                         <br><br>
 
                         <ul class="list-disc list-inside flex flex-col gap-2">
-                            <li><a class="text-sky-400 hover:text-sky-600" href="">Palace of the Damned</a> (1)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a> (1)</li>
-                            <li><a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a> (1)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Buddha's Palm</a> (1)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Palace of the Damned</a> (1)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a> (1)</li>
                         </ul>
                     </td>
                 </tr>
