Updated the footer in nioh2.html. Added a new file: /basics/info.txt. Updated Guardian Spirit info for the mission The Hollow Fortress in DOTSamurai_missions.txt.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -525,8 +525,8 @@
         <div class="flex flex-col items-center gap-1 md:gap-3
             lg:flex-row">
 
-            <a class="text-xl text-slate-300" href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html">Nioh 2 Wiki</a>
-            <span class="text-slate-300">Development: LiuKang1080</span>
+            <a class="text-xl text-slate-300 hover:text-sky-400" href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html">Nioh 2 Wiki</a>
+            <a class="text-slate-300 hover:text-sky-400" href="https://github.com/LiuKang1080">Development: LiuKang1080</a>
         </div>
 
         <span class="text-slate-300">&copy; 2025</span>
